Fix 문서와 소스코드 내의 오리지널 스크립트 관련 내용 수정

--- a/welcome.html
+++ b/welcome.html
@@ -2,8 +2,8 @@
 <html lang="ko">
     <head>
         <meta charset="utf-8">
-        <title>Naver-Cafe-Twitch-Clip-Loader 상세 설정 페이지</title>
-        <style id="1.fmapv9g2qd">
+        <title>Naver-Cafe-Twitch-Clip-Extension 상세 설정 페이지</title>
+        <style>
             #NCTCL_setting .btn {
                 font-size: 12px;
             }
@@ -224,8 +224,8 @@
             <div id="NCTCL_setting_head">
                 <div style="height: 25px; display: inline-block; white-space: nowrap;">Settings</div>
                 <div style="display: flex; height: 25px; float: right;">
-                    <a href="https://github.com/nomomo/Naver-Cafe-Twitch-Clip-Loader/" target="_blank" style="font-size: 12px; font-weight: normal; align-self: flex-end;">
-                        Naver-Cafe-Twitch-Clip-Loader v0.0.3 (https://github.com/nomomo/Naver-Cafe-Twitch-Clip-Loader/)
+                    <a href="https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension/" target="_blank" style="font-size: 12px; font-weight: normal; align-self: flex-end;">
+                        Naver-Cafe-Twitch-Clip-Extension v0.0.3 (https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension/)
                     </a>
                 </div>
             </div>
