Feat host_permission 권한 제거, popup의 ui 개선 및 세부설정을 팝업에서 리다이렉션 하도록 수정

--- a/popup.html
+++ b/popup.html
@@ -1,86 +1,37 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <script src="lib/jquery-3.6.0.min.js"></script>
-    <script src="lib/arrive.js"></script>
-    <script src="utils.js"></script>
-    <script src="popup.js"></script>
-    <style>
-    /* The switch - the box around the slider */
-    .switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-    }
-
-    /* Hide default HTML checkbox */
-    .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-    }
-
-    /* The slider */
-    .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-    }
-
-    .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-    }
-
-    input:checked + .slider {
-    background-color: #2196F3;
-    }
-
-    input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-    }
-
-    input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-    }
-
-    /* Rounded sliders */
-    .slider.round {
-    border-radius: 34px;
-    }
-
-    .slider.round:before {
-    border-radius: 50%;
-    }
-    </style>
-    <title>Naver Cafe Twitch Clip Loader</title>
-</head>
-<body>
-    <!-- Rounded switch -->
-    <label class="switch">
-        <input id="use" type="checkbox">
-        <span class="slider round"></span>
-    </label>
-    <!-- chrome extension link a tag "welcome.html" -->
-    <a href="welcome.html" target="_blank" style="display: inline-block; text-align: center; margin: 0 auto">
-        <span>상세 설정</span>
-    </a>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <script src="/lib/jquery-3.3.1.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
+    <script type="text/javascript" src="utils.js"></script>
+    <script type="text/javascript" src="popup.js"></script>
+  </head>
+  <body>
+    <div class="ui grid container">
+      <div class="sixteen wide center aligned column">
+        <h1 id="title"><span style="color: #2DB400">NC</span><span style="color: #6441a5">TC</span> Extension</h1>
+        <p id="caption">클립영상을 네이버에서 손쉽게!</p>
+        <!-- Authentication mode -->
+        <div>
+          <div class="ui toggle checkbox">
+            <input id="use" type="checkbox">
+            <label for="use">활성여부</label>
+          </div>
+          <br/><br/>
+          <a href="welcome.html" class="ui">
+            <i class="icon cog"></i>
+            상세설정
+          </a>
+        </div>
+        <br/>
+      <!-- Generate Socials -->
+      <div id="socials" class="sixteen wide column">
+        <a title="NCTC GitHub" href="https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension" target="_blank"><i class="ui black github icon"></i></a>
+        <a title="Email" href="mailto:getCurrentThread@gmail.com" target="_blank"><i class="ui red envelope icon"></i></a>
+        <a title="Issues" href="https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension/issues" target="_blank"><i class="ui comment alternate icon"></i></a>
+        <a title="Settings" href="welcome.html" target="_blank"><i class="ui grey home icon"></i></a>
+      </div>
+    </div>
+   
+  </body>
 </html>
