Feat arrive.js 라이브러리 제거 및 타이머 딜레이 설정이 가능하도록 기능 수정

--- a/welcome.html
+++ b/welcome.html
@@ -272,6 +272,28 @@
                         />
                     </div>
                 </li>
+                <li NCTCL_setting_key="timerDelay" NCTCL_setting_depth="2" class="NCTCL_setting_depth2">
+                    <div class="NCTCL_setting_category_blank"></div>
+                    <div class="NCTCL_setting_list_head">
+                        <span class="NCTCL_setting_title">스케쥴러 동작 (ms)</span>
+                        <span class="NCTCL_setting_desc">
+                            클립 전환 타이머를 조정합니다.<br />
+                            (Default: 4000, Range: 500~)
+                        </span>
+                    </div>
+                    <div class="NCTCL_setting_input_container form-group">
+                        <input
+                            class="form-control"
+                            autocomplete="off"
+                            autocorrect="off"
+                            autocapitalize="off"
+                            spellcheck="false"
+                            type="number"
+                            name="timerDelay"
+                            min="500"
+                        />
+                    </div>
+                </li>
                 <li NCTCL_setting_key="method" NCTCL_setting_depth="2" class="NCTCL_setting_depth2">
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head"><span class="NCTCL_setting_title">클립 링크 변환 시점 선택</span><span class="NCTCL_setting_desc">클립 링크를 비디오로 변환하는 시점을 선택</span></div>
