Fix 입력값으로 최소치 최대치 범위를 넘도록 줄 수 있는 문제 수정

--- a/welcome.html
+++ b/welcome.html
@@ -291,6 +291,7 @@
                             type="number"
                             name="timerDelay"
                             min="500"
+                            step="100"
                         />
                     </div>
                 </li>
