--- a/settings.html
+++ b/settings.html
@@ -239,7 +239,7 @@
         <link rel="stylesheet" type="text/css" href="lib/bootstrap.min.css" media="all" />
         <script type="text/javascript" src="lib/jquery-3.6.0.min.js"></script>
         <script type="text/javascript" src="utils.js"></script>
-        <script type="text/javascript" src="welcome.js"></script>
+        <script type="text/javascript" src="settings.js"></script>
     </head>
 
     <body style="padding: 0px 30px 30px;">
