Style 변경된 기본 스타일로 설정창 적용

--- a/popup.html
+++ b/popup.html
@@ -18,7 +18,7 @@
             <label for="use">활성여부</label>
           </div>
           <br/><br/>
-          <a href="welcome.html" class="ui">
+          <a href="settings.html" class="ui">
             <i class="icon cog"></i>
             상세설정
           </a>
@@ -29,7 +29,7 @@
         <a title="NCTC GitHub" href="https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension" target="_blank"><i class="ui black github icon"></i></a>
         <a title="Email" href="mailto:getCurrentThread@gmail.com" target="_blank"><i class="ui red envelope icon"></i></a>
         <a title="Issues" href="https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension/issues" target="_blank"><i class="ui comment alternate icon"></i></a>
-        <a title="Settings" href="welcome.html" target="_blank"><i class="ui grey home icon"></i></a>
+        <a title="Settings" href="settings.html" target="_blank"><i class="ui grey home icon"></i></a>
       </div>
     </div>
    
