--- a/settings.html
+++ b/settings.html
@@ -326,7 +326,7 @@
                         />
                     </div>
                 </li>
-                <li NCTCL_setting_radio_enable_value="clickRequired" NCTCL_setting_key="clickRequiredAutoPlay" class="NCTCL_setting_depth2">
+                <li NCTCL_setting_radio_enable_value="clickRequired" NCTCL_setting_key="clickRequiredAutoPlay" class="NCTCL_setting_depth3">
                     <div class="NCTCL_setting_category_name">섬네일 클릭 시</div>
                     <div class="NCTCL_setting_list_head"><span class="NCTCL_setting_title">클립 로드 시 클립 자동 재생</span><span class="NCTCL_setting_desc">섬네일 클릭과 동시에 클립을 자동 재생합니다. 이 옵션을 사용하면 클립이 간혹 음소거 상태로 재생될 수 있습니다.</span></div>
                     <div class="NCTCL_setting_input_container form-group">
@@ -479,7 +479,7 @@
                         />
                     </div>
                 </li>
-                <li gm_setting_key="play_and_pause_by_click" class="NCTCL_setting_depth1 NCTCL_setting_dev">
+                <li gm_setting_key="playAndPauseByClick" class="NCTCL_setting_depth1 NCTCL_setting_dev">
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
                         <span class="NCTCL_setting_title">[실험적] Twitch Clip 페이지 스타일로 표시</span>
@@ -496,8 +496,7 @@
                             autocapitalize="off" 
                             spellcheck="false" 
                             type="checkbox" 
-                            gm_setting_type="checkbox" 
-                            gm_setting_key="play_and_pause_by_click"
+                            name="playAndPauseByClick"
                         />
                     </div>
                 </li>
