Feat 네이버 동영상 최대 화질로 설정 기능 추가

--- a/settings.html
+++ b/settings.html
@@ -536,7 +536,7 @@
                     </div>
                 </li>
                 <!-- 게시판 글 기본 개수 설정 -->
-                <li gm_setting_key="naverBoardDefaultArticleCount" class="NCTCL_setting_depth1 NCTCL_setting_dev">
+                <!-- <li gm_setting_key="naverBoardDefaultArticleCount" class="NCTCL_setting_depth1 NCTCL_setting_dev">
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
                         <span class="NCTCL_setting_title">[실험적] 게시판 글 기본 개수 설정</span>
@@ -557,9 +557,9 @@
                             <option spellcheck="false" value="50">50</option>
                         </select>
                     </div>
-                </li>
+                </li> -->
                 <!-- 네이버 카페 새로고침 개선 -->
-                <li gm_setting_key="improvedRefresh" class="NCTCL_setting_depth1 NCTCL_setting_dev">
+                <!-- <li gm_setting_key="improvedRefresh" class="NCTCL_setting_depth1 NCTCL_setting_dev">
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
                         <span class="NCTCL_setting_title">[실험적] 네이버 카페 새로고침 개선</span>
@@ -576,7 +576,7 @@
                             name="improvedRefresh"
                         />
                     </div>
-                </li>
+                </li> -->
                 <!-- 리셋 -->
                 <li class="NCTCL_setting_category NCTCL_setting_depth1">
                     <div class="NCTCL_setting_category_name">Reset</div>
