Styles 기능 옵션에서 실험 표현을 모두 삭제

--- a/settings.html
+++ b/settings.html
@@ -405,10 +405,10 @@
                     </div>
                 </li>
                 <!-- 비디오 재생 시 다른 비디오 일시정지 -->
-                <li gm_setting_key="autoPauseOtherClips" class="NCTCL_setting_depth1 NCTCL_setting_dev">
+                <li gm_setting_key="autoPauseOtherClips" class="NCTCL_setting_depth1">
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
-                        <span class="NCTCL_setting_title">[실험적] 비디오 재생 시 다른 재생 중인 비디오 일시정지</span>
+                        <span class="NCTCL_setting_title">비디오 재생 시 다른 재생 중인 비디오 일시정지</span>
                         <span class="NCTCL_setting_desc">
                             Twitch Clip 또는 Naver Video 를 재생 시, 다른 재생 중인 모든 Naver Video 와 Twitch Clip 을 일시정지 합니다. 다음 클립을 재생하기 위하여 이전 클립을 정지할 필요가 없습니다. (엄청 편하다!)
                         </span>
@@ -426,10 +426,10 @@
                     </div>
                 </li>
                 <!-- 네이버 비디오에도 적용 -->
-                <li gm_setting_key="autoPauseOtherClipsForNaverVideo" class="NCTCL_setting_depth2 NCTCL_setting_dev">
+                <li gm_setting_key="autoPauseOtherClipsForNaverVideo" class="NCTCL_setting_depth2">
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
-                        <span class="NCTCL_setting_title">[실험적] 네이버 비디오에도 적용</span>
+                        <span class="NCTCL_setting_title">네이버 비디오에도 적용</span>
                         <span class="NCTCL_setting_desc">네이버 비디오 관련 재생 문제가 발생 시 본 옵션을 끄세요.</span></div>
                     <div class="NCTCL_setting_input_container form-group">
                         <input 
@@ -443,10 +443,10 @@
                         />
                     </div>
                 </li>
-                <li gm_setting_key="removeOriginalLinks" class="NCTCL_setting_depth1 NCTCL_setting_dev">
+                <li gm_setting_key="removeOriginalLinks" class="NCTCL_setting_depth1">
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
-                        <span class="NCTCL_setting_title">[실험적] 클립 원본 링크 삭제</span>
+                        <span class="NCTCL_setting_title">클립 원본 링크 삭제</span>
                         <span class="NCTCL_setting_desc">클립 링크를 비디오로 변환 시, 본문에 동일한 링크가 존재하는 경우 삭제하여 보기 좋게 만듭니다.</span>
                     </div>
                     <div class="NCTCL_setting_input_container form-group">
@@ -461,10 +461,10 @@
                         />
                     </div>
                 </li>
-                <li gm_setting_key="autoPlayNextClip" class="NCTCL_setting_depth1 NCTCL_setting_dev">
+                <li gm_setting_key="autoPlayNextClip" class="NCTCL_setting_depth1">
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
-                        <span class="NCTCL_setting_title">[실험적] 다음 클립을 자동으로 이어서 재생</span>
+                        <span class="NCTCL_setting_title">다음 클립을 자동으로 이어서 재생</span>
                         <span class="NCTCL_setting_desc">본문에 여러 Twitch Clip 이 존재하는 경우, 클립이 종료되면 다음 클립을 자동으로 재생합니다. (편하다!)</span>
                     </div>
                     <div class="NCTCL_setting_input_container form-group">
@@ -479,10 +479,10 @@
                         />
                     </div>
                 </li>
-                <li gm_setting_key="playAndPauseByClick" class="NCTCL_setting_depth1 NCTCL_setting_dev">
+                <li gm_setting_key="playAndPauseByClick" class="NCTCL_setting_depth1">
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
-                        <span class="NCTCL_setting_title">[실험적] Twitch Clip 페이지 스타일로 표시</span>
+                        <span class="NCTCL_setting_title">Twitch Clip 페이지 스타일로 표시</span>
                         <span class="NCTCL_setting_desc">
                             클립 화면을 클릭하여 재생 및 일시정지 되도록 만듭니다. (편하다!)<br>
                             일시정지 시 상단 오버레이와 재생 버튼을 숨깁니다. 재생 중 화면을 더블 클릭하여 전체화면을 할 수 있습니다.
@@ -501,9 +501,9 @@
                     </div>
                 </li>
                 <!-- 편의 기능 -->
-                <li gm_setting_key="naverVideoAutoMaxQuality" class="NCTCL_setting_category NCTCL_setting_depth1 NCTCL_setting_dev">
+                <li gm_setting_key="naverVideoAutoMaxQuality" class="NCTCL_setting_category NCTCL_setting_depth1">
                     <div class="NCTCL_setting_category_name">편의 기능</div>
-                    <div class="NCTCL_setting_list_head"><span class="NCTCL_setting_title">[실험적] 네이버 비디오를 항상 최대 화질로 시작</span><span class="NCTCL_setting_desc">네이버 비디오를 로드할 때 선택 가능한 최대 화질로 자동 설정합니다.</span></div>
+                    <div class="NCTCL_setting_list_head"><span class="NCTCL_setting_title">네이버 비디오를 항상 최대 화질로 시작</span><span class="NCTCL_setting_desc">네이버 비디오를 로드할 때 선택 가능한 최대 화질로 자동 설정합니다.</span></div>
                     <div class="NCTCL_setting_input_container form-group">
                         <input 
                             class="form-control" 
@@ -517,10 +517,10 @@
                     </div>
                 </li>
                 <!-- 전체화면 스크롤 동작 개선 -->
-                <li gm_setting_key="fixFullScreenScrollChange" class="NCTCL_setting_depth1 NCTCL_setting_dev">
+                <li gm_setting_key="fixFullScreenScrollChange" class="NCTCL_setting_depth1">
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
-                        <span class="NCTCL_setting_title">[실험적] 전체화면 스크롤 동작 개선</span>
+                        <span class="NCTCL_setting_title">전체화면 스크롤 동작 개선</span>
                         <span class="NCTCL_setting_desc">비디오를 전체화면 한 후 해제했을 때 스크롤이 다른 위치로 변경되는 문제를 개선합니다. 만약 전체화면 시 스크롤과 관련된 문제가 발생한다면 이 기능을 끄십시오.</span>
                     </div>
                     <div class="NCTCL_setting_input_container form-group">
