Feat 트위치 스타일로 재생 기능 추가 및 다음 클립으로 자동재생 기능 임의 삭제

--- a/settings.html
+++ b/settings.html
@@ -461,7 +461,7 @@
                         />
                     </div>
                 </li>
-                <li gm_setting_key="autoPlayNextClip" class="NCTCL_setting_depth1">
+                <!-- <li gm_setting_key="autoPlayNextClip" class="NCTCL_setting_depth1">
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
                         <span class="NCTCL_setting_title">다음 클립을 자동으로 이어서 재생</span>
@@ -478,7 +478,7 @@
                             name="autoPlayNextClip" 
                         />
                     </div>
-                </li>
+                </li> -->
                 <li gm_setting_key="playAndPauseByClick" class="NCTCL_setting_depth1">
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
