Refactor 패키지 별로 분리 작업 시행

--- a/html/settings.html
+++ b/html/settings.html
@@ -194,10 +194,10 @@
                 background: #ccc;
             }
         </style>
-        <link rel="stylesheet" type="text/css" href="lib/bootstrap.min.css" media="all" />
-        <script type="text/javascript" src="lib/jquery-3.6.0.min.js"></script>
-        <script type="text/javascript" src="utils.js"></script>
-        <script type="text/javascript" src="settings.js"></script>
+        <link rel="stylesheet" type="text/css" href="/lib/bootstrap.min.css" media="all" />
+        <script type="text/javascript" src="/lib/jquery-3.6.0.min.js"></script>
+        <script type="text/javascript" src="/js/utils.js"></script>
+        <script type="text/javascript" src="/js/settings.js"></script>
     </head>
 
     <body style="padding: 0px 30px 30px;">
@@ -604,7 +604,7 @@
                     </div>
                     <div class="NCTCL_setting_input_container form-group">
                        <a href="https://www.buymeacoffee.com/nomomo" target="_blank"><img
-                          src="images/default-yellow.png" alt="Buy Me A Coffee"
+                          src="/assets/default-yellow.png" alt="Buy Me A Coffee"
                           height="41" width="174" /></a>
                     </div>
                  </li>
@@ -616,7 +616,7 @@
                     </div>
                     <div class="NCTCL_setting_input_container form-group">
                        <a href="https://toon.at/donate/636947867320352181" target="_blank"><img
-                          src="images/toonation_b11.gif"
+                          src="/assets/toonation_b11.gif"
                           height="41" alt="Donate with Toonation" /></a>
                     </div>
                  </li>
