--- a/html/popup.html
+++ b/html/popup.html
@@ -3,8 +3,8 @@
     <meta charset="utf-8">
     <script src="/lib/jquery-3.6.0.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
-    <script type="text/javascript" src="utils.js"></script>
-    <script type="text/javascript" src="popup.js"></script>
+    <script type="text/javascript" src="/js/utils.js"></script>
+    <script type="text/javascript" src="/js/popup.js"></script>
   </head>
   <body>
     <div class="ui grid container">
@@ -18,7 +18,7 @@
             <label for="use">활성여부</label>
           </div>
           <br/><br/>
-          <a href="settings.html" class="ui">
+          <a href="/html/settings.html" class="ui">
             <i class="icon cog"></i>
             상세설정
           </a>
@@ -29,7 +29,7 @@
         <a title="NCTC GitHub" href="https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension" target="_blank"><i class="ui black github icon"></i></a>
         <a title="Email" href="mailto:getCurrentThread@gmail.com" target="_blank"><i class="ui red envelope icon"></i></a>
         <a title="Issues" href="https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension/issues" target="_blank"><i class="ui comment alternate icon"></i></a>
-        <a title="Settings" href="settings.html" target="_blank"><i class="ui grey home icon"></i></a>
+        <a title="Settings" href="/html/settings.html" target="_blank"><i class="ui grey home icon"></i></a>
       </div>
     </div>
    
