--- a/html/settings.html
+++ b/html/settings.html
@@ -559,7 +559,7 @@
                     </div>
                 </li> -->
                 <!-- 네이버 카페 새로고침 개선 -->
-                <!-- <li gm_setting_key="improvedRefresh" class="NCTCL_setting_depth1 NCTCL_setting_dev">
+                <li gm_setting_key="improvedRefresh" class="NCTCL_setting_depth1 NCTCL_setting_dev">
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
                         <span class="NCTCL_setting_title">[실험적] 네이버 카페 새로고침 개선</span>
@@ -576,7 +576,7 @@
                             name="improvedRefresh"
                         />
                     </div>
-                </li> -->
+                </li>
                 <!-- 리셋 -->
                 <li class="NCTCL_setting_category NCTCL_setting_depth1">
                     <div class="NCTCL_setting_category_name">Reset</div>
