--- a/html/settings.html
+++ b/html/settings.html
@@ -16,7 +16,7 @@
                 <div style="height: 25px; display: inline-block; white-space: nowrap;">Settings</div>
                 <div style="display: flex; height: 25px; float: right;">
                     <a href="https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension/" target="_blank" style="font-size: 12px; font-weight: normal; align-self: flex-end; overflow: hidden;">
-                        Naver-Cafe-Twitch-Clip-Extension v0.1.1 (https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension/)
+                        Naver-Cafe-Twitch-Clip-Extension v0.1.2 (https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension/)
                     </a>
                 </div>
                 <div>
@@ -220,7 +220,7 @@
                     <div class="NCTCL_setting_list_head">
                         <span class="NCTCL_setting_title">비디오 재생 시 다른 재생 중인 비디오 일시정지</span>
                         <span class="NCTCL_setting_desc">
-                            Twitch Clip 또는 Naver Video 를 재생 시, 다른 재생 중인 모든 Naver Video 와 Twitch Clip 을 일시정지 합니다. 다음 클립을 재생하기 위하여 이전 클립을 정지할 필요가 없습니다. (엄청 편하다!)
+                            Twitch Clip 또는 Naver Video 또는 Youtube 영상을 재생 시, 다른 재생 중인 모든 Naver Video 와 Twitch Clip, Youtube 영상을 일시정지 합니다. 다음 클립을 재생하기 위하여 이전 클립을 정지할 필요가 없습니다. (엄청 편하다!)
                         </span>
                     </div>
                     <div class="NCTCL_setting_input_container form-group">
@@ -250,6 +250,26 @@
                             spellcheck="false" 
                             type="checkbox" 
                             name="autoPauseOtherClipsForNaverVideo" 
+                            toggle="autoPauseOtherClips:true"
+                        />
+                    </div>
+                </li>
+                <!-- 유튜브 영상에도 적용 -->
+                <li gm_setting_key="autoPauseOtherClipsForYoutubeVideo" class="NCTCL_setting_depth2">
+                    <div class="NCTCL_setting_category_blank"></div>
+                    <div class="NCTCL_setting_list_head">
+                        <span class="NCTCL_setting_title">유튜브 영상에도 적용</span>
+                        <span class="NCTCL_setting_desc">유튜브 영상 관련 재생 문제가 발생 시 본 옵션을 끄세요.</span></div>
+                    <div class="NCTCL_setting_input_container form-group">
+                        <input 
+                            class="form-control" 
+                            autocomplete="off" 
+                            autocorrect="off" 
+                            autocapitalize="off" 
+                            spellcheck="false" 
+                            type="checkbox" 
+                            name="autoPauseOtherClipsForYoutubeVideo" 
+                            toggle="autoPauseOtherClips:true"
                         />
                     </div>
                 </li>
@@ -395,7 +415,7 @@
                     target="_blank">NCTC-Loader</a> v0.5.1
                  <div class="footer_divider"></div>
                  <a href="https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension"
-                    target="_blank">NCTC-Extension</a> v0.1.1.5
+                    target="_blank">NCTC-Extension</a> v0.1.2.0
                  <div class="footer_divider"></div>
                  ©2017-2022 <a href="https://nomo.asia/" target="_blank">NOMO</a>,
                  <a href="https://github.com/getCurrentThread" target="_blank">getCurrentThread</a>
