--- a/html/settings.html
+++ b/html/settings.html
@@ -370,7 +370,7 @@
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
                         <span class="NCTCL_setting_title">자주 사용하지 않는 옵션을 숨기기</span>
-                        <span class="NCTCL_setting_desc">현재 설정 페이지에서 자주 사용하지 않는 옵션을 숨깁니다.</span>
+                        <span class="NCTCL_setting_desc">설정 페이지에서 자주 사용하지 않는 옵션을 숨깁니다.</span>
                     </div>
                     <div class="NCTCL_setting_input_container form-group">
                         <input 
