--- a/html/settings.html
+++ b/html/settings.html
@@ -10,13 +10,13 @@
         <script type="text/javascript" src="/js/settings.js"></script>
     </head>
 
-    <body style="padding: 0px 30px 30px;">
+    <body>
         <div id="NCTCL_setting_container">
             <div id="NCTCL_setting_head">
                 <div style="height: 25px; display: inline-block; white-space: nowrap;">Settings</div>
                 <div style="display: flex; height: 25px; float: right;">
                     <a href="https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension/" target="_blank" style="font-size: 12px; font-weight: normal; align-self: flex-end; overflow: hidden;">
-                        Naver-Cafe-Twitch-Clip-Extension v0.1.2 (https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension/)
+                        Naver-Cafe-Twitch-Clip-Extension v0.1.3 (https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension/)
                     </a>
                 </div>
                 <div>
@@ -396,7 +396,7 @@
                     <div class="NCTCL_setting_input_container form-group"></div>
                 </li>
                 <!-- 후원 배너 -->
-                <li class="NCTCL_setting_category NCTCL_setting_depth1">
+                <!-- <li class="NCTCL_setting_category NCTCL_setting_depth1">
                     <div class="NCTCL_setting_category_name">
                        후원하기
                        <div class="NCTCL_setting_depth2">(원저작자)</div>
@@ -427,14 +427,14 @@
                           height="41" alt="Donate with Toonation" /></a>
                     </div>
                  </li>
-              </ul>
+              </ul> -->
               <!-- footer -->
               <div id="NCTCL_setting_footer">
                  <a href="https://github.com/nomomo/Naver-Cafe-Twitch-Clip-Loader"
-                    target="_blank">NCTC-Loader</a> v0.5.1
+                    target="_blank">NCTC-Loader</a>
                  <div class="footer_divider"></div>
                  <a href="https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension"
-                    target="_blank">NCTC-Extension</a> v0.1.2.1
+                    target="_blank">NCTC-Extension</a>
                  <div class="footer_divider"></div>
                  ©2017-2022 <a href="https://nomo.asia/" target="_blank">NOMO</a>,
                  <a href="https://github.com/getCurrentThread" target="_blank">getCurrentThread</a>
