Feat 클립 재생 후 추천 영상이 뜨는 것을 숨기도록 하는 기능 추가

--- a/html/settings.html
+++ b/html/settings.html
@@ -309,6 +309,27 @@
                         />
                     </div>
                 </li> -->
+                <li gm_setting_key="hideClipPostplayRecommendations" class="NCTCL_setting_depth1" infrequent>
+                    <div class="NCTCL_setting_category_blank"></div>
+                    <div class="NCTCL_setting_list_head">
+                        <span class="NCTCL_setting_title">클립 재생 후 추천 영상 숨김</span>
+                        <span class="NCTCL_setting_desc">
+                            클립 재생 후에 나오는 추천 영상을 숨겨줍니다.<br>
+                            (추천 영상으로 문제가 있는 영상이 보이는 것을 방지합니다)
+                        </span>
+                    </div>
+                    <div class="NCTCL_setting_input_container form-group">
+                        <input 
+                            class="form-control" 
+                            autocomplete="off" 
+                            autocorrect="off" 
+                            autocapitalize="off" 
+                            spellcheck="false" 
+                            type="checkbox" 
+                            name="hideClipPostplayRecommendations"
+                        />
+                    </div>
+                </li>
                 <li gm_setting_key="playAndPauseByClick" class="NCTCL_setting_depth1" infrequent>
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
